Bug 398793 - "Per activity Power Management" KCM window is too small
Summary: "Per activity Power Management" KCM window is too small
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.15.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 379858 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-18 12:21 UTC by Patrick Silva
Modified: 2019-03-30 19:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments
screenshot (80.17 KB, image/png)
2018-09-18 12:21 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-09-18 12:21:53 UTC
Created attachment 115067 [details]
screenshot

Search for "Per activity Power Management" in the apps launcher and open it.
Window is too small as you can see in the screenshot.
Comment 1 Nate Graham 2018-09-18 21:23:06 UTC
Not a QML KCM, so probably its sizeHint is too low.
Comment 2 Nate Graham 2018-09-18 21:24:25 UTC
*** Bug 379858 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2019-03-30 19:25:12 UTC
Git commit 806c4c073ff4fa40924db692981963895f4562b8 by Nate Graham, on behalf of Tigran Gabrielyan.
Committed on 30/03/2019 at 19:25.
Pushed by ngraham into branch 'master'.

Fixed initial size and content width of Activity Settings KCM

Summary:
Tab contents are added when KActivities::Consumer::serviceStatusChanged signal is fired which happens after the layout is set. This causes the window to be too small initially so a minimumSize is set manually.

This change also adjusts the column span to 2 for rows with a single checkbox. The contents of third column would be pushed outside the scroll area on rows where column 1 is the label and column 2 are the controls since the width of checkboxes in column 1 is too wide.
FIXED-IN: 5.16.0

Reviewers: #plasma, broulik, ngraham

Reviewed By: ngraham

Subscribers: ngraham, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D20055

M  +4    -1    kcmodule/activities/activitypage.cpp
M  +3    -5    kcmodule/common/actionconfigwidget.cpp

https://commits.kde.org/powerdevil/806c4c073ff4fa40924db692981963895f4562b8